# roxterm

./: .DirIcon  .clang-format  .gitignore  .ycm_extra_conf.py.in  AUTHORS  AppInfo.xml  AppInfo.xml.in  AppRun  CMakeLists.txt  ChangeLog  ChangeLog.old  INSTALL  INSTALL.Debian  INSTALL.ReadFirst  Makefile.am  NEWS  README  README.md  README.transifex  README.translations  TODO  acinclude.m4  bootstrap.sh  builddeb  configure.ac  configure.ac.in  deploy_to_ppa.sh  gendist.mk  gendist.sh  genlog  maitch.py  meson.build  meson_options.txt  mkycmflags  mscript.py  release_version  roxterm-config.1.xml.in  roxterm.1.xml.in  roxterm.appdata.xml.in  roxterm.desktop  (+12 more)
.tx/: config
Config/: meson.build
Config/Colours/: GTK  Nocturne  Nord  Tango
Config/Shortcuts/: Default
Help/: COPYING-LGPL  guide.html  index.html  index.php  installation.html  meson.build  news.html  roxterm.css  roxterm_ie.css
Help/en/: guide.html  index.html  installation.html  news.html
Help/lib/: logo_text.xcf  roxterm.css  roxterm_ie.css
debian/: changelog  changelog.in  control  copyright  gbp.conf  roxterm-common.install  roxterm-common.lintian-overrides  roxterm-data.install  roxterm-gtk2.install  roxterm-gtk2.lintian-overrides  roxterm-gtk2.menu  roxterm-gtk2.postinst  roxterm-gtk2.prerm  roxterm-gtk3.install  roxterm-gtk3.lintian-overrides  roxterm-gtk3.menu  roxterm-legacy.postinst  roxterm-legacy.prerm  roxterm.doc-base  roxterm.install  roxterm.lintian-overrides  roxterm.menu  roxterm.xpm  rules  source.lintian-overrides  upstream-signing-key.pgp  watch
debian/patches/: cmake-3.10-backwards-compatibility.patch  gnuc_fallthrough.patch  series
debian/source/: options
docs/: index.html  picklang.js  update_html.sh
docs/en/: guide.html  index.html  installation.html  new_index.html  news.html
docs/es/: guide.html  index.html  installation.html  new_index.html  news.html
docs/fr/: guide.html  index.html  installation.html  new_index.html  news.html
docs/lib/: lang-menu.js  lang.js  navigate.js  picklang.js  roxterm.css  roxterm_ie.css
docs/pt_BR/: guide.html  index.html  installation.html  new_index.html  news.html
docs/ru/: guide.html  index.html  installation.html  new_index.html  news.html
docs/uk/: guide.html  index.html  installation.html  new_index.html  news.html
man/: CMakeLists.txt  roxterm-config.1.xml.in
man/en/: roxterm-config.1.xml.in  roxterm.1.xml.in
man/es/: Makefile.am  roxterm-config.1.xml.in
man/pt_BR/: roxterm-config.1.xml.in  roxterm.1.xml.in
po/: CMakeLists.txt  LINGUAS  Makevars  POTFILES.in  ca.po  de.po  en.po  en_GB.po  es.po  fr.po  fr_BE.po  gl.po  hu.po  messages.pot  po4a.xhtml.cfg  pt.po  pt_BR.po  roxterm.pot  roxterm.pt.po  ru.po  uk.po  zh_CN.po
po/xhtml/: es.po  fr.po  hu.po  pt_BR.po  ru.po  uk.po  xhtml.pot
po4a/: LINGUAS  Makefile.am  genmake.sh  guide.html.de.po  guide.html.es.po  guide.html.fr.po  guide.html.gl.po  guide.html.pot  guide.html.pt_BR.po  guide.html.ru.po  guide.html.uk.po  guide.html.zh_CN.po  index.html.de.po  index.html.es.po  index.html.fr.po  index.html.gl.po  index.html.pot  index.html.pt_BR.po  index.html.ru.po  index.html.uk.po  index.html.zh_CN.po  installation.html.de.po  installation.html.es.po  installation.html.fr.po  installation.html.gl.po  installation.html.pot  installation.html.pt_BR.po  installation.html.ru.po  installation.html.uk.po  installation.html.zh_CN.po  news.html.de.po  news.html.es.po  news.html.fr.po  news.html.gl.po  news.html.pot  news.html.pt_BR.po  news.html.ru.po  news.html.uk.po  news.html.zh_CN.po  po4a.cfg  (+19 more)
poxml/: appdata.its
src/: .clang-format  CMakeLists.txt  Makefile.am  about.c  about.h  boxcompat.h  capplet.c  capplet.h  colour-compat.h  colourgui.c  colourgui.h  colourscheme.c  colourscheme.h  config.h.in  configlet.c  configlet.h  defns.h  display.c  display.h  dlg.c  dlg.h  dragrcv.c  dragrcv.h  dynopts.c  dynopts.h  encodings.c  encodings.h  geom-container.c  geom-container.h  geom-notebook.c  geom-notebook.h  geom-scrolled.c  geom-scrolled.h  geom-widget.c  geom-widget.h  getname.c  getname.h  globalopts.c  globalopts.h  gresources.xml  (+101 more)
src/shim/: roxterm-shim.go  shim-back-channel.cpp  shim-back-channel.h  shim-buffer.h  shim-constants.h  shim-log.cpp  shim-log.h  shim-main-broken.cpp.bak  shim-main.cpp  shim-pipe.cpp  shim-pipe.h  shim-pipes.cpp  shim-pipes.h  shim-queue.h  shim-slice.cpp  shim-slice.h  shim-stream-processor.cpp  shim-stream-processor.h
